--- a/charts/monitoring/Chart.yaml
+++ b/charts/monitoring/Chart.yaml
@@ -8,3 +8,5 @@ dependencies:
   - name: kube-prometheus-stack
     version: "50.3.0"
     repository: "https://prometheus-community.github.io/helm-charts"
+  - name: file-exporter
+    version: "0.1.0"
