feat(monitoring): add service monitor to file exporter

--- a/charts/monitoring/charts/file-exporter/values.yaml
+++ b/charts/monitoring/charts/file-exporter/values.yaml
@@ -33,4 +33,6 @@ tolerations:
 affinity: {}
 
 files:
-  - /tmp
+  - /host/run/dietpi/.update_available
+  - /host/run/dietpi/.live_patches
+  - /host/run/dietpi/.apt_updates
