--- a/charts/monitoring/charts/file-exporter/values.yaml
+++ b/charts/monitoring/charts/file-exporter/values.yaml
@@ -18,7 +18,13 @@ service:
   type: ClusterIP
   port: 80
 
-resources: {}  # TODO
+resources:
+  requests:
+    memory: "32Mi"
+    cpu: "20m"
+  limits:
+    memory: "128Mi"
+    cpu: "200m"
 
 nodeSelector: {}
 
