--- a/charts/filebrowser/templates/deployment.yaml
+++ b/charts/filebrowser/templates/deployment.yaml
@@ -17,12 +17,32 @@ spec:
               path: /health
               port: http
           volumeMounts:
-            - mountPath: /.filebrowser.json
-              name: config
+            - name: config
+              mountPath: /.filebrowser.json
               subPath: .filebrowser.json
+            {{- if .Values.volumes.databasePath }}
+            - name: database
+              mountPath: /database
+            {{- end }}
+            {{- if .Values.volumes.rootDir }}
+            - name: root-dir
+              mountPath: {{ .Values.config.root }}
+            {{- end }}
           {{- include "common.container" . | nindent 10 }}
       volumes:
         - name: config
           configMap:
             name: {{ include "common.fullname" . }}
+        {{- if .Values.volumes.databasePath }}
+        - name: database
+          hostPath:
+            path: {{ .Values.volumes.databasePath }}
+            type: Directory
+        {{- end }}
+        {{- if .Values.volumes.rootDir }}
+        - name: root-dir
+          hostPath:
+            path: {{ .Values.volumes.rootDir }}
+            type: Directory
+        {{- end }}
 {{- end -}}
