--- a/charts/monitoring/Chart.yaml
+++ b/charts/monitoring/Chart.yaml
@@ -10,3 +10,5 @@ dependencies:
     repository: "https://prometheus-community.github.io/helm-charts"
   - name: file-exporter
     version: "0.2.0"
+  - name: apt-exporter
+    version: "0.1.1"
