fix(filebrowser): use recreate strategy to prevent locks

--- a/charts/filebrowser/templates/deployment.yaml
+++ b/charts/filebrowser/templates/deployment.yaml
@@ -1,6 +1,8 @@
 {{- include "common.deployment" (list . "filebrowser.deployment") -}}
 {{- define "filebrowser.deployment" -}}
 spec:
+  strategy:
+    type: Recreate
   template:
     spec:
       containers:
