--- a/charts/monitoring/charts/file-exporter/templates/daemonset.yaml
+++ b/charts/monitoring/charts/file-exporter/templates/daemonset.yaml
@@ -1,21 +1,8 @@
-apiVersion: apps/v1
-kind: DaemonSet
-metadata:
-  name: {{ include "common.fullname" . }}
-  labels: {{- include "common.labels" . | nindent 4 }}
+{{- include "common.daemonset" (list . "file-exporter.daemonset") -}}
+{{- define "file-exporter.daemonset" -}}
 spec:
-  selector:
-    matchLabels: {{- include "common.selectorLabels" . | nindent 6 }}
   template:
-    metadata:
-      {{- with .Values.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      labels: {{- include "common.selectorLabels" . | nindent 8 }}
     spec:
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - command: ["/exporter"]
           args:
@@ -37,15 +24,4 @@ spec:
         - name: host
           hostPath:
             path: /
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+{{- end -}}
