--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -1,6 +1,6 @@
 kube-prometheus-stack:
   alertmanager:
-    enabled: false
+    enabled: true
   grafana:
     defaultDashboardsTimezone: Europe/Berlin
     ingress:
