--- a/charts/gerbera/ci/max-values.yaml
+++ b/charts/gerbera/ci/max-values.yaml
@@ -1,7 +1,6 @@
 enableDLNA: true
 
 volumes:
-  - name: videos
-    path: /tmp
-  - name: music
-    path: /tmp
+  configPath: /tmp
+  mediaPaths:
+    - /tmp
