--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -31,6 +31,7 @@ kube-prometheus-stack:
               - receiver: gotify
                 matchers:
                   - severity =~ "warning|critical"
+            repeat_interval: 10h
     sidecar:
       alerts:
         enabled: true
