--- a/charts/audiobookshelf/values.yaml
+++ b/charts/audiobookshelf/values.yaml
@@ -42,9 +42,14 @@ tolerations: []
 
 affinity: {}
 
-volumes:
-  configPath: ""
-  metadataPath: ""
-  mediaPaths: []
+persistence:
+  enabled: false
+  annotations: {}
+  storageClass: ""
+  accessModes:
+    - ReadWriteOnce
+  size: 1Gi
+
+extraVolumes: []
 
 timezone: ""  # Defaults to 'Europe/Berlin'
