feat(gerbera): migrate to pvc

--- a/charts/gerbera/ci/max-values.yaml
+++ b/charts/gerbera/ci/max-values.yaml
@@ -1,6 +1,14 @@
-enableDLNA: true
+persistence:
+  enabled: true
+  storageClass: ""
+  accessModes:
+    - ReadWriteOnce
+  size: 1Gi
 
-volumes:
-  configPath: /tmp
-  mediaPaths:
-    - /tmp
+extraVolumes:
+  - name: test
+    mountPath: /content/test
+    hostPath: /tmp
+    readOnly: true
+
+enableDLNA: true
