--- a/charts/gerbera/values.yaml
+++ b/charts/gerbera/values.yaml
@@ -42,8 +42,14 @@ tolerations: []
 
 affinity: {}
 
-enableDLNA: false
+persistence:
+  enabled: false
+  annotations: {}
+  storageClass: ""
+  accessModes:
+    - ReadWriteOnce
+  size: 1Gi
 
-volumes:
-  configPath: ""
-  mediaPaths: []
+extraVolumes: []
+
+enableDLNA: false
