--- a/charts/audiobookshelf/ci/max-values.yaml
+++ b/charts/audiobookshelf/ci/max-values.yaml
@@ -1,9 +1,6 @@
 persistence:
   enabled: true
-  storageClass: ""
-  accessModes:
-    - ReadWriteOnce
-  size: 1Gi
+  size: 500Mi
 
 extraVolumes:
   - name: test
