feat(gotify): migrate to pvc

--- a/charts/gotify/ci/max-values.yaml
+++ b/charts/gotify/ci/max-values.yaml
@@ -1,8 +1,9 @@
 image:
   repository: gotify/server
 
-volumes:
-  mediaPath: /tmp
+persistence:
+  enabled: true
+  size: 100Mi
 
 defaultUser:
   name: test
