feat(n8n): run SQLite vacuum on startup

--- a/charts/n8n/templates/deployment.yaml
+++ b/charts/n8n/templates/deployment.yaml
@@ -10,6 +10,8 @@ spec:
               value: {{ .Values.timezone | default "Europe/Berlin" | quote }}
             - name: TZ
               value: {{ .Values.timezone | default "Europe/Berlin" | quote }}
+            - name: DB_SQLITE_VACUUM_ON_STARTUP
+              value: "true"
           ports:
             - name: http
               containerPort: 5678
