fix(gotify): use recreate strategy

--- a/charts/gotify/templates/deployment.yaml
+++ b/charts/gotify/templates/deployment.yaml
@@ -1,6 +1,8 @@
 {{- include "common.deployment" (list . "gotify.deployment") -}}
 {{- define "gotify.deployment" -}}
 spec:
+  strategy:
+    type: Recreate
   template:
     spec:
       enableServiceLinks: false
