--- a/charts/gotify/values.yaml
+++ b/charts/gotify/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: gotify/server-arm64
+  repository: gotify/server
   pullPolicy: IfNotPresent
   tag: ""  # Defaults to chart appVersion
 
