--- a/charts/audiobookshelf/templates/deployment.yaml
+++ b/charts/audiobookshelf/templates/deployment.yaml
@@ -28,6 +28,9 @@ spec:
             - name: data
               mountPath: /metadata
               subPath: metadata
+            - name: data
+              mountPath: /podcasts
+              subPath: podcasts
             {{- range .Values.extraVolumes }}
             - name: {{ .name }}
               mountPath: {{ .mountPath }}
