fix(monitoring): set value to default to prevent helm issues

--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -61,3 +61,4 @@ kube-prometheus-stack:
       serviceMonitorNamespaceSelector:
         matchLabels:
           export-prometheus-metrics: "true"
+      maximumStartupDurationSeconds: 900
