--- a/charts/home-assistant/templates/deployment.yaml
+++ b/charts/home-assistant/templates/deployment.yaml
@@ -28,6 +28,33 @@ spec:
               mountPath: /config/configuration.yaml
               subPath: configuration.yaml
           {{- include "common.container" . | nindent 10 }}
+      initContainers:
+        - name: ensure-config
+          image: busybox
+          command:
+            - sh
+            - -c
+            - |
+              set -eux
+              # Check if the automations file exists
+              if [ ! -f /config/automations.yaml ]; then
+                echo "Automations file not found, creating a new one"
+                touch /config/automations.yaml
+                echo "[]" >> /config/automations.yaml
+              fi
+              # Check if the scripts file exists
+              if [ ! -f /config/scripts.yaml ]; then
+                echo "Scripts file not found, creating a new one"
+                touch /config/scripts.yaml
+              fi
+              # Check if the scenes file exists
+              if [ ! -f /config/scenes.yaml ]; then
+                echo "Scenes file not found, creating a new one"
+                touch /config/scenes.yaml
+              fi
+          volumeMounts:
+          - name: config
+            mountPath: /config
       hostNetwork: true
       volumes:
         - name: config
