--- a/charts/monitoring/alerts/rules.yaml
+++ b/charts/monitoring/alerts/rules.yaml
@@ -15,28 +15,23 @@ groups:
               to: 0
             datasourceUid: prometheus
             model:
-              editorMode: builder
-              exemplar: false
-              expr: node_thermal_zone_temp > 60
+              expr: max_over_time(node_thermal_zone_temp[5m]) > 60
               format: table
-              hide: false
-              instant: true
-              intervalMs: 1000
-              legendFormat: __auto
-              maxDataPoints: 43200
-              range: false
+              range: true
               refId: A
         noDataState: OK
         execErrState: Error
-        for: 5m
+        for: 10m
         annotations:
-          summary: Node temperature is getting to hot
-          description: 'Node temperature is getting to hot for {{ $labels.instance }}'
+          summary: Node temperature warning
+          description: 'Node {{ $labels.instance }} temperature above 60°C'
         labels:
+          severity: warning
           receiver: gotify
         isPaused: false
+
       - uid: argo-cd-app-sync
-        title: Argo CD app sync
+        title: Argo CD App Out of Sync
         condition: A
         data:
           - refId: A
@@ -45,28 +40,23 @@ groups:
               to: 0
             datasourceUid: prometheus
             model:
-              editorMode: builder
-              exemplar: false
               expr: argocd_app_info{sync_status!="Synced"} != 0
               format: table
-              hide: false
               instant: true
-              intervalMs: 1000
-              legendFormat: __auto
-              maxDataPoints: 43200
-              range: false
               refId: A
         noDataState: OK
         execErrState: Error
         for: 5m
         annotations:
-          summary: Sync status of Argo CD applications
+          summary: Argo CD app not synced
           description: 'Argo CD application {{ $labels.name }} is out of sync'
         labels:
+          severity: warning
           receiver: gotify
         isPaused: false
+
       - uid: argo-cd-app-health
-        title: Argo CD app health
+        title: Argo CD App Unhealthy
         condition: A
         data:
           - refId: A
@@ -75,28 +65,23 @@ groups:
               to: 0
             datasourceUid: prometheus
             model:
-              editorMode: builder
-              exemplar: false
               expr: argocd_app_info{health_status!="Healthy"} != 0
               format: table
-              hide: false
               instant: true
-              intervalMs: 1000
-              legendFormat: __auto
-              maxDataPoints: 43200
-              range: false
               refId: A
         noDataState: OK
         execErrState: Error
         for: 5m
         annotations:
-          summary: Health status of Argo CD applications
-          description: 'Argo CD application {{ $labels.name }} is not healthy'
+          summary: Argo CD app not healthy
+          description: 'Argo CD application {{ $labels.name }} is not healthy (status={{ $labels.health_status }})'
         labels:
+          severity: critical
           receiver: gotify
         isPaused: false
+
       - uid: pod-unhealthy
-        title: Pod unhealthy
+        title: Pod Unhealthy
         condition: A
         data:
           - refId: A
@@ -105,28 +90,23 @@ groups:
               to: 0
             datasourceUid: prometheus
             model:
-              editorMode: builder
-              exemplar: false
-              expr: sum by(namespace, pod) (kube_pod_status_phase{phase=~"Failed|Pending|Unknown"}) != 0
+              expr: sum by(namespace, pod, phase) (kube_pod_status_phase{phase=~"Failed|Pending|Unknown"}) > 0
               format: table
-              hide: false
               instant: true
-              intervalMs: 1000
-              legendFormat: __auto
-              maxDataPoints: 43200
-              range: false
               refId: A
         noDataState: OK
         execErrState: Error
         for: 5m
         annotations:
-          summary: Kubernetes Pod not healthy
-          description: 'Pod {{ $labels.namespace }}/{{ $labels.pod }} is not healthy'
+          summary: Kubernetes Pod unhealthy
+          description: 'Pod {{ $labels.namespace }}/{{ $labels.pod }} is in phase {{ $labels.phase }}'
         labels:
+          severity: warning
           receiver: gotify
         isPaused: false
+
       - uid: pod-crash-looping
-        title: Pod is crash looping
+        title: Pod CrashLoopBackOff
         condition: A
         data:
           - refId: A
@@ -135,54 +115,42 @@ groups:
               to: 0
             datasourceUid: prometheus
             model:
-              editorMode: builder
-              exemplar: false
-              expr: max_over_time(kube_pod_container_status_waiting_reason{reason="CrashLoopBackOff"}[1m]) != 0
+              expr: max_over_time(kube_pod_container_status_waiting_reason{reason="CrashLoopBackOff"}[5m]) > 0
               format: table
-              hide: false
-              instant: true
-              intervalMs: 1000
-              legendFormat: __auto
-              maxDataPoints: 43200
-              range: false
+              range: true
               refId: A
         noDataState: OK
         execErrState: Error
-        for: 5m
+        for: 2m
         annotations:
-          summary: Kubernetes Pod is crash looping
+          summary: Kubernetes Pod crash looping
           description: 'Pod {{ $labels.namespace }}/{{ $labels.pod }} is crash looping'
         labels:
+          severity: critical
           receiver: gotify
         isPaused: false
+
       - uid: update-available
-        title: Update available
+        title: Update Available
         condition: A
         data:
           - refId: A
             relativeTimeRange:
-              from: 600
+              from: 3600
               to: 0
             datasourceUid: prometheus
             model:
-              disableTextWrap: false
-              editorMode: builder
               expr: last_over_time(file_exists{file=~"/.*/dietpi/.*"}[1h]) != 0
               format: table
-              fullMetaSearch: false
-              includeNullMetadata: true
               instant: true
-              intervalMs: 1000
-              legendFormat: __auto
-              maxDataPoints: 43200
-              range: false
               refId: A
         noDataState: OK
         execErrState: Error
-        for: 5m
+        for: 15m
         annotations:
-          summary: Update available
+          summary: System update available
           description: 'Update for {{ $labels.instance }} available'
         labels:
+          severity: info
           receiver: gotify
         isPaused: false
