--- a/charts/monitoring/templates/grafana-alerts.yaml
+++ b/charts/monitoring/templates/grafana-alerts.yaml
@@ -1,9 +1,39 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: grafana-alerts
+  name: {{ include "common.fullname" . }}-grafana-node-alerts
   labels:
     grafana_alert: "1"
 data:
   rules.yaml: |-
-    {{- .Files.Get "alerts/rules.yaml" | nindent 4 }}
+    {{- .Files.Get "alerts/node.yaml" | nindent 4 }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "common.fullname" . }}-grafana-pod-alerts
+  labels:
+    grafana_alert: "1"
+data:
+  rules.yaml: |-
+    {{- .Files.Get "alerts/pod.yaml" | nindent 4 }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "common.fullname" . }}-grafana-argocd-alerts
+  labels:
+    grafana_alert: "1"
+data:
+  rules.yaml: |-
+    {{- .Files.Get "alerts/argocd.yaml" | nindent 4 }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "common.fullname" . }}-grafana-longhorn-alerts
+  labels:
+    grafana_alert: "1"
+data:
+  rules.yaml: |-
+    {{- .Files.Get "alerts/longhorn.yaml" | nindent 4 }}
