--- a/renovate.json
+++ b/renovate.json
@@ -12,5 +12,12 @@
       ],
       "datasourceTemplate": "docker"
     }
+  ],
+  "bumpVersions": [
+    {
+      "filePatterns": ["{{packageFileDir}}/Chart.yaml"],
+      "matchStrings": ["version:\\s(?<version>[^\\s]+)"],
+      "bumpType": "patch"
+    }
   ]
 }
