fix(home-assistant): use correct secrets mount

--- a/charts/home-assistant/templates/deployment.yaml
+++ b/charts/home-assistant/templates/deployment.yaml
@@ -73,7 +73,7 @@ spec:
           configMap:
             name: {{ include "common.fullname" . }}
         {{- if .Values.secretsSecretName }}
-        - name: config
+        - name: secrets
           secret:
             secretName: {{ .Values.secretsSecretName }}
             items:
