feat(home-assistant): add service monitor

--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -58,6 +58,11 @@ jobs:
       - name: Create kind cluster
         uses: helm/kind-action@v1.12.0
 
+      - name: Install CRDs
+        if: matrix.chart == 'home-assistant'
+        run: |
+          kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/refs/heads/main/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
+
       - name: Run chart-testing (install)
         run: |
           ct install \
