--- a/charts/monitoring/alerts/longhorn.yaml
+++ b/charts/monitoring/alerts/longhorn.yaml
@@ -27,7 +27,7 @@ groups:
           description: 'The actual space used by Longhorn volume {{ $labels.volume }} on {{ $labels.node }} is at {{ $value }}% capacity for more than 5 minutes.'
         labels:
           severity: warning
-          receiver: gotify
+          receiver: apprise
         isPaused: false
 
       - uid: longhorn-volume-status-critical
@@ -52,7 +52,7 @@ groups:
           description: 'Longhorn volume {{ $labels.volume }} on {{ $labels.node }} is Fault for more than 2 minutes.'
         labels:
           severity: critical
-          receiver: gotify
+          receiver: apprise
         isPaused: false
 
       - uid: longhorn-volume-status
@@ -77,7 +77,7 @@ groups:
           description: 'Longhorn volume {{ $labels.volume }} on node {{ $labels.node }} has status {{ $labels.robustness }}.'
         labels:
           severity: warning
-          receiver: gotify
+          receiver: apprise
         isPaused: false
 
       - uid: longhorn-node-storage-warning
@@ -102,7 +102,7 @@ groups:
           description: 'The used storage of node {{ $labels.node }} is at {{ $value }}% capacity for more than 5 minutes.'
         labels:
           severity: warning
-          receiver: gotify
+          receiver: apprise
         isPaused: false
 
       - uid: longhorn-node-down
@@ -127,5 +127,5 @@ groups:
           description: 'There are {{ $value }} Longhorn nodes which have been offline.'
         labels:
           severity: critical
-          receiver: gotify
+          receiver: apprise
         isPaused: false
