--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -16,23 +16,37 @@ kube-prometheus-stack:
         apiVersion: 1
         contactPoints:
           - orgId: 1
-            name: gotify
+            name: apprise
             receivers:
-              - uid: gotify
+              - uid: apprise
                 type: webhook
                 settings:
-                  url: https://gotify.192-168-178-31.sslip.io/message?token=<app_token>
+                  url: https://apprise.192-168-178-31.sslip.io/notify/apprise
                   httpMethod: POST
+                  username: admin
+                  password: <password>
+                  payload:
+                    template: |-
+                      {{`{{ define "apprise.custom.payload" -}}`}}
+                      {{`  {{ coll.Dict`}}
+                      {{`  "title" (printf "%s %s"`}}
+                      {{`     (tmpl.Inline "{{ if eq .Status \"resolved\" }}✅{{ else if eq .Status \"firing\" }}🔥{{ else }}ℹ️{{ end }}" . )`}}
+                      {{`     (tmpl.Exec "default.title" . ))`}}
+                      {{`  "body" (tmpl.Exec "default.message" . )`}}
+                      {{`  "tag" "alerts"`}}
+                      {{`  | data.ToJSONPretty " "}}`}}
+                      {{`{{- end }}`}}
+                      {{`{{ template "apprise.custom.payload" . }}`}}
         policies:
           - orgId: 1
-            receiver: gotify
+            receiver: apprise
             routes:
-              - receiver: gotify
+              - receiver: apprise
                 matchers:
-                  - receiver = "gotify"
-              - receiver: gotify
+                  - receiver = "apprise"
+              - receiver: apprise
                 matchers:
-                  - severity =~ "warning|critical"
+                  - severity =~ "info|warning|critical"
             repeat_interval: 10h
     sidecar:
       alerts:
