--- a/charts/monitoring/templates/grafana-alerts.yaml
+++ b/charts/monitoring/templates/grafana-alerts.yaml
@@ -47,3 +47,13 @@ metadata:
 data:
   rules.yaml: |-
     {{- .Files.Get "alerts/home-assistant.yaml" | nindent 4 }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "common.fullname" . }}-apps-alerts
+  labels:
+    grafana_alert: "1"
+data:
+  rules.yaml: |-
+    {{- .Files.Get "alerts/apps.yaml" | nindent 4 }}
