--- a/charts/monitoring/templates/grafana-alerts.yaml
+++ b/charts/monitoring/templates/grafana-alerts.yaml
@@ -1,59 +1,13 @@
+{{- $root := . }}
+{{- range $path, $_ := .Files.Glob "alerts/*.yaml" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "common.fullname" . }}-grafana-node-alerts
+  name: {{ include "common.fullname" $root }}-{{ base $path | trimSuffix ".yaml" }}-grafana-alerts
   labels:
     grafana_alert: "1"
 data:
   rules.yaml: |-
-    {{- .Files.Get "alerts/node.yaml" | nindent 4 }}
+    {{- $root.Files.Get $path | nindent 4 }}
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: {{ include "common.fullname" . }}-grafana-pod-alerts
-  labels:
-    grafana_alert: "1"
-data:
-  rules.yaml: |-
-    {{- .Files.Get "alerts/pod.yaml" | nindent 4 }}
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: {{ include "common.fullname" . }}-grafana-argocd-alerts
-  labels:
-    grafana_alert: "1"
-data:
-  rules.yaml: |-
-    {{- .Files.Get "alerts/argocd.yaml" | nindent 4 }}
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: {{ include "common.fullname" . }}-grafana-longhorn-alerts
-  labels:
-    grafana_alert: "1"
-data:
-  rules.yaml: |-
-    {{- .Files.Get "alerts/longhorn.yaml" | nindent 4 }}
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: {{ include "common.fullname" . }}-home-assistant-alerts
-  labels:
-    grafana_alert: "1"
-data:
-  rules.yaml: |-
-    {{- .Files.Get "alerts/home-assistant.yaml" | nindent 4 }}
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: {{ include "common.fullname" . }}-apps-alerts
-  labels:
-    grafana_alert: "1"
-data:
-  rules.yaml: |-
-    {{- .Files.Get "alerts/apps.yaml" | nindent 4 }}
+{{- end }}
