--- a/charts/monitoring/templates/grafana-dashboards.yaml
+++ b/charts/monitoring/templates/grafana-dashboards.yaml
@@ -1,19 +1,13 @@
+{{- $root := . }}
+{{- range $path, $_ := .Files.Glob "dashboards/*.json" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "common.fullname" . }}-grafana-dashboard-raspberry
+  name: {{ include "common.fullname" $root }}-{{ base $path | trimSuffix ".json" }}-grafana-dashboard
   labels:
     grafana_dashboard: "1"
 data:
-  raspberry.json: |-
-    {{- .Files.Get "dashboards/raspberry.json" | nindent 4 }}
+  dashboard.json: |-
+    {{- $root.Files.Get $path | nindent 4 }}
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: {{ include "common.fullname" . }}-grafana-dashboard-argocd
-  labels:
-    grafana_dashboard: "1"
-data:
-  argocd.json: |-
-    {{- .Files.Get "dashboards/argocd.json" | nindent 4 }}
+{{- end }}
