--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,10 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
+      - name: Add repositories
+        run: |
+          helm repo add cnpg https://cloudnative-pg.github.io/charts/
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
         env:
