feat(monitoring): add condition for subcharts

--- a/charts/monitoring/Chart.yaml
+++ b/charts/monitoring/Chart.yaml
@@ -10,5 +10,7 @@ dependencies:
     repository: "https://prometheus-community.github.io/helm-charts"
   - name: file-exporter
     version: "0.1.0"
+    condition: file-exporter.enabled
   - name: apt-exporter
     version: "0.1.0"
+    condition: apt-exporter.enabled
